--- a/miniprogram/pages/detail/index.wxml
+++ b/miniprogram/pages/detail/index.wxml
@@ -1,24 +1,20 @@
-<!-- <view class="container">
-  <view class="form-group">
+<view class="form-group">
     <view class="form-cell">
-      <view class="form-cell_title">{{detail.title}}</view>
-      <view class="form-cell_desc">{{detail.desc}}</view>
-
+        <view class="form-cell_picture" wx:if="{{detail.picture}}"><image src="{{detail.picture}}" /></view>
+        <view class="form-cell_title">{{detail.title}}</view>
+        <view class="form-cell_desc">{{detail.desc}}</view>
     </view>
-  </view>
 </view>
- -->
 
-<view class="container">
-  <view class="form-group">
+<view class="form-group" wx:if="{{detail.link}}">
     <view class="form-cell">
-      <view class="form-cell_title">物品名称：{{detail.title}}</view>
-      <view class="form-cell_title">备注：{{detail.desc}}</view>
-      <view><rich-text nodes="{{detail.information}}"></rich-text></view>
+        <view class="form-cell_desc">相关资料</view>
+        <image src="{{detail.link}}" style="width: 50%;padding-left: 25%;" mode="widthFix" data-src="{{detail.link}}" bindtap="previewImage"></image>
     </view>
-  </view>
 </view>
+
+
 
 <view class="footer">
-    <view  bindtap="borrow">申请借用</view>
-  </view>
+    <view bindtap="borrow">申请借用</view>
+</view>
