--- a/miniprogram/pages/detail/index.wxml
+++ b/miniprogram/pages/detail/index.wxml
@@ -1,6 +1,6 @@
 <view class="form-group">
     <view class="form-cell">
-        <view class="form-cell_picture" wx:if="{{detail.picture}}"><image src="{{detail.picture}}" /></view>
+        <view class="form-cell_picture" wx:if="{{detail.picture}}"><image src="{{detail.picture}}" mode="aspectFill"/></view>
         <view class="form-cell_title">{{detail.title}}</view>
         <view class="form-cell_desc">{{detail.desc}}</view>
     </view>
