--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,14 +1,15 @@
 <!--pages/index/index.wxml-->
 
 <!-- UserInfo -->
-<view  >
-    <view wx:if="{{!hasUserInfo}}" class="userInfo-button">
-        <button bindtap="getUserProfile" type="primary"> 授权登录 </button>
+<view>
+    <view wx:if="{{!hasUserInfo}}">
+        <button bindtap="getUserProfile">授权登录</button>
+        <!-- <button bindtap="getUserProfile" > 授权登录 </button> -->
     </view>
-    <view wx:else   bindtap="goToUserInfo" class="userInfo">
-        <image  class="userInfo-avatar" src="{{UserInfo.avatarUrl}}" mode="widthFix"></image>
+    <view wx:else bindtap="goToUserInfo" class="userInfo">
+        <image class="userInfo-avatar" src="{{UserInfo.avatarUrl}}" mode="widthFix"></image>
         <text class="userInfo-nickname">{{UserInfo.nickName}}</text>
-        <view class="userInfo-info" >
+        <view class="userInfo-info">
             <text wx:if="{{UserInfo.name&&UserInfo.tel}}">{{UserInfo.name}} {{UserInfo.tel}}</text>
             <text wx:else>✏️请登记信息</text>
         </view>
@@ -26,6 +27,7 @@
         <view class="myList_cell">
             <van-cell-group inset>
                 <view wx:for="{{myBorrow}}" wx:for-index="index" wx:if="{{item.borrow==1&&item.return==0}}" id="{{index}}" bindtap="goToReturn">
+                    <!-- <view wx:for="{{myBorrow}}" wx:for-index="index" wx:if="{{item.borrow==1&&item.return==0}}" id="{{item.product}}" bindtap="goToReturn"> -->
                     <van-cell icon="star-o" size="large" is-link title="{{item.borrowList[0].title}}" value="{{item.borrowTime}}" />
                 </view>
             </van-cell-group>
@@ -35,49 +37,55 @@
 </block>
 
 <!-- 以下为管理者界面 -->
+
 <!-- 借用申请 -->
 <view wx:if="{{UserInfo.isManager}}">
-<block class="myList" >
-    <view class="myList_title">
-        <view class="myList_title_text">借用申请</view>
-        <view class="myList_title_more">查看更多></view>
+    <view class="view_fengexian">
+        <view></view>
+        <text class="text_fengexian">以下为管理员界面</text>
+        <view></view>
     </view>
-    <view class="myList_cell">
-        <van-cell-group inset>
-            <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.borrowRequest==1}}" id="{{index}}" bindtap="goToBorrowConfirm">
-                <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
-            </view>
-        </van-cell-group>
-    </view>
-</block>
-<!-- 归还申请 -->
-<block class="myList" >
-    <view class="myList_title">
-        <view class="myList_title_text">归还申请</view>
-        <view class="myList_title_more">查看更多></view>
-    </view>
-    <view class="myList_cell">
-        <van-cell-group inset>
-            <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.returnRequest==1}}" id="{{index}}" bindtap="goToReturnConfirm">
-                <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
-            </view>
-        </van-cell-group>
-    </view>
-</block>
-<!-- 借用中 -->
-<block class="myList" >
-    <view class="myList_title">
-        <view class="myList_title_text">借用中</view>
-        <view class="myList_title_more">查看更多></view>
-    </view>
-    <view class="myList_cell">
-        <van-cell-group inset>
-            <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.borrow==1}}" id="{{index}}">
-                <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
-            </view>
-        </van-cell-group>
-    </view>
-</block>
+    <block class="myList">
+        <view class="myList_title">
+            <view class="myList_title_text">借用申请</view>
+            <view class="myList_title_more">查看更多></view>
+        </view>
+        <view class="myList_cell">
+            <van-cell-group inset>
+                <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.borrowRequest==1}}" id="{{index}}" bindtap="goToBorrowConfirm">
+                    <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
+                </view>
+            </van-cell-group>
+        </view>
+    </block>
+    <!-- 归还申请 -->
+    <block class="myList">
+        <view class="myList_title">
+            <view class="myList_title_text">归还申请</view>
+            <view class="myList_title_more">查看更多></view>
+        </view>
+        <view class="myList_cell">
+            <van-cell-group inset>
+                <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.returnRequest==1}}" id="{{index}}" bindtap="goToReturnConfirm">
+                    <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
+                </view>
+            </van-cell-group>
+        </view>
+    </block>
+    <!-- 借用中 -->
+    <block class="myList">
+        <view class="myList_title">
+            <view class="myList_title_text">借用中</view>
+            <view class="myList_title_more">查看更多></view>
+        </view>
+        <view class="myList_cell">
+            <van-cell-group inset>
+                <view wx:for="{{allBorrow}}" wx:for-index="index" wx:if="{{item.borrow==1}}" id="{{index}}">
+                    <van-cell size="large" title="{{item.borrowList[0].title}}" value="{{item.userName}}" />
+                </view>
+            </van-cell-group>
+        </view>
+    </block>
 </view>
 <!-- About -->
 <!-- <view class="about">
