--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -3,29 +3,27 @@
     width: 100%;
     height: 300rpx;
     display: grid;
-    grid-gap: 50rpx;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 10px 10px;
+    grid-template-areas:
+        ". . . . . . ."
+        ". a1 a1 a2 a2 a2 ."
+        ". a1 a1 a3 a3 a3 ."
+        ". . . . . . .";
     background-color: #aa4d3d;
     box-shadow: 0rpx 0rpx 10rpx 10rpx #888;
 }
 
-.userInfo-button {
-    width: 40%;
-    margin: auto;
-    padding-top: 400rpx;
-}
 
 .userInfo-avatar {
-    width: 180rpx;
-    grid-column: 2/3;
-    grid-row: 2/4;
+    grid-area: a1;
+    width: 80%;
     border-radius: 10px;
 }
 
 .userInfo-nickname {
-    grid-column: 3/6;
-    grid-row: 2;
+    grid-area: a2;
     color: #fff;
     font-size: 48rpx;
     text-align: left;
@@ -33,13 +31,17 @@
 }
 
 .userInfo-info {
-    grid-column: 3/6;
-    grid-row: 3;
+    grid-area: a3;
     color: #fff;
     font-size: 28rpx;
     text-align: left;
 }
 
+.userInfo-button {
+    width: 40%;
+    margin: auto;
+    padding-top: 400rpx;
+}
 
 
 .myList {
@@ -74,12 +76,24 @@
     margin-top: 30rpx;
 }
 
-.refresh {
-    margin: 40rpx auto;
-    font-size: 30rpx;
-    color: #aa4d3d;
+.view_fengexian {
+    width: 96%;
+    height: 50rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 20rpx 2% 0rpx 2%;
 }
 
-.about {
-    margin: 0 auto;
+.view_fengexian view {
+    width: 25%;
+    height: 4rpx;
+    background: linear-gradient(to right, #ead6ee, #aa4d3d);
+}
+
+.text_fengexian {
+    font-size: 30rpx;
+    color: #aa4d3d;
+    margin: 0rpx 2% 0rpx 2%;
 }
