--- a/miniprogram/pages/return/index.wxml
+++ b/miniprogram/pages/return/index.wxml
@@ -1,11 +1,16 @@
-<view class="container">
-  <view class="form-group">
+<view class="form-group">
     <view class="form-cell">
-      <view class="form-cell_title">物品名称：{{myBorrow[list_index].borrowList[0].title}}</view>
-      <view class="form-cell_title">备注：{{myBorrow[list_index].borrowList[0].desc}}</view>
-      <view class="form-cell_title">借用时间：{{myBorrow[list_index].borrowTime}}</view>
+        <view class="form-cell_picture" wx:if="{{detail.picture}}"><image src="{{detail.picture}}" mode="aspectFill"/></view>
+        <view class="form-cell_title">{{detail.title}}</view>
+        <view class="form-cell_desc">{{detail.desc}}</view>
     </view>
-  </view>
+</view>
+
+<view class="form-group" wx:if="{{detail.link}}">
+    <view class="form-cell">
+        <view class="form-cell_desc">相关资料</view>
+        <image src="{{detail.link}}" style="width: 50%;padding-left: 25%;" mode="widthFix" data-src="{{detail.link}}" bindtap="previewImage"></image>
+    </view>
 </view>
 
 <view class="footer">
