--- a/miniprogram/pages/return/index.wxss
+++ b/miniprogram/pages/return/index.wxss
@@ -1,68 +1,54 @@
-.form-cell_title {
-  margin-bottom: 10px;
-  font-size: medium;
-}
-
-.form-cell_title-placeholder {
-  font-size: small;
-  color: lightgray;
-}
-
-.upload-text {
-  margin-left: auto;
-  opacity: 0.5;
-}
-
-.upload {
-  width: 15px;
-  height: 15px;
-  margin-left: 10px;
-}
-
-.option {
-  margin-left: 15vw;
-}
-
-.selector {
-  width: 15px;
-  height: 15px;
-  margin-left: auto;
-}
-
-.returnButtom {
-  width: 50vw;
-  height: 10vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+.form-group {
+  width: calc(100% - 40px);
+  margin:  20px;
   border-radius: 10px;
-  background: var(--button-color);
-  color: white;
-}
-
-.footer {
-  width: 100%;
-  height: 10vh;
-  position: fixed;
-  bottom: 0;
-  display: flex;
-  border-top: lightgray solid 1px;
-  background-color: #aa4d3d;
-}
-
-.footer view {
-  width: 100%;
-  height: 100%;
-  padding-top: 2vh;
-  text-align: center;
-}
-
-.cancel {
   background: white;
 }
 
+
+.form-cell {
+  padding: 20px;
+}
+
+
+.form-cell_picture{
+  margin: auto;
+}
+
+.form-cell_title {
+font-size: 50rpx;
+margin-bottom: 10px;
+}
+
+.form-cell_desc {
+font-size: 32rpx;
+color: #808080;
+}
+
+.footer {
+width: 100%;
+height: 10vh;
+position: fixed;
+bottom: 0;
+display: flex;
+border-top: lightgray solid 1px;
+color: white;
+background-color: #aa4d3d;
+font-size: large;
+}
+
+.footer view {
+width: 100%;
+height: 100%;
+padding-top: 2vh;
+text-align: center;
+}
+
+.list {
+background: white;
+}
+
 .save {
-  color: white;
-  background: #353535;
+color: white;
+background: #353535;
 }
