--- a/miniprogram/pages/userInfo/index.wxss
+++ b/miniprogram/pages/userInfo/index.wxss
@@ -1,25 +1,28 @@
-
 .userInfo {
     width: 100%;
     height: 300rpx;
     display: grid;
-    grid-gap: 50rpx;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 10px 10px;
+    grid-template-areas:
+        ". . . . . . ."
+        ". a1 a1 a2 a2 a2 ."
+        ". a1 a1 a3 a3 a3 ."
+        ". . . . . . .";
     background-color: #aa4d3d;
     box-shadow: 0rpx 0rpx 10rpx 10rpx #888;
 }
 
+
 .userInfo-avatar {
-    width: 180rpx;
-    grid-column: 2/3;
-    grid-row: 2/4;
+    grid-area: a1;
+    width: 80%;
     border-radius: 10px;
 }
 
 .userInfo-nickname {
-    grid-column: 3/6;
-    grid-row: 2;
+    grid-area: a2;
     color: #fff;
     font-size: 48rpx;
     text-align: left;
@@ -27,8 +30,7 @@
 }
 
 .userInfo-info {
-    grid-column: 3/6;
-    grid-row: 3;
+    grid-area: a3;
     color: #fff;
     font-size: 28rpx;
     text-align: left;
