--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -12,33 +12,47 @@ page {
   flex-direction: column;
   justify-content: flex-start;
 }
+ 
+ .form-group {
+  width: calc(100% - 40px);
+  margin: 10px 20px;
+  border-radius: 10px;
+  background: white;
+}
 
-button {
-  margin-top: 400rpx;
-  width: 40%;
-  background-color: #fff;
-  border-radius: 24px;
-  border-style: none;
-  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
-  box-sizing: border-box;
-  color: #3c4043;
-  font-size: 14px;
-  font-weight: 500;
-  font-family: inherit;
-  letter-spacing: .25px;
-  line-height: normal;
-  padding: 11px 24px;
-  transition: background box-shadow 280ms ease;
- }
- 
- button:hover {
-  background: #F6F9FE;
-  color: #174ea6;
- }
- 
- button:active {
-  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
-  outline: none;
-  border: 2px solid #4285f4;
- }
- 
+.form-cell {
+  padding: 10px ;
+}
+
+.form-cell_picture {
+  margin: auto;
+}
+
+.form-cell_title {
+  font-size: 50rpx;
+  margin-bottom: 10px;
+}
+
+.form-cell_desc {
+  font-size: 32rpx;
+  color: #808080;
+}
+
+.footer {
+  width: 100%;
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  border-top: lightgray solid 1px;
+  color: white;
+  background-color: #aa4d3d;
+  font-size: large;
+}
+
+.footer view {
+  width: 100%;
+  height: 100%;
+  padding-top: 2vh;
+  text-align: center;
+}
