--- a/miniprogram/pages/list/index.wxss
+++ b/miniprogram/pages/list/index.wxss
@@ -2,7 +2,7 @@
 .banner {
     width: 100%;
     height: 350rpx;
-    background-color: #aa4d3d;
+    background-color: var(--themeColor);
 }
 
 .swip_photo {
