--- a/miniprogram/pages/userInfo/index.wxss
+++ b/miniprogram/pages/userInfo/index.wxss
@@ -10,7 +10,7 @@
         ". a1 a1 a2 a2 a2 ."
         ". a1 a1 a3 a3 a3 ."
         ". . . . . . .";
-    background-color: #aa4d3d;
+    background-color: var(--themeColor);
     box-shadow: 0rpx 0rpx 10rpx 10rpx #888;
 }
 
@@ -37,21 +37,3 @@
 }
 
 
-.footer {
-    width: 100%;
-    height: 10vh;
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    border-top: lightgray solid 1px;
-    color: white;
-    background-color: #aa4d3d;
-    font-size: large;
-  }
-  
-  .footer view {
-    width: 100%;
-    height: 100%;
-    padding-top: 2vh;
-    text-align: center;
-  }
