--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,48 +1,39 @@
 /* pages/index/index.wxss */
+
 .userInfo {
     width: 100%;
     height: 300rpx;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 10px 10px;
-    grid-template-areas:
-        ". . . . . . ."
-        ". a1 a1 a2 a2 a2 ."
-        ". a1 a1 a3 a3 a3 ."
-        ". . . . . . .";
+    display: flex;
+		flex-direction: row;
+		align-items: center;
     background-color: var(--themeColor);
     box-shadow: 0rpx 0rpx 10rpx 10rpx #888;
 }
 
 
 .userInfo-avatar {
-    grid-area: a1;
-    width: 80%;
-    border-radius: 10px;
+    display: flex;
+    width: 180rpx;
+		border-radius: 10px;
+		margin-top: 0rpx;
+		margin-left: 100rpx;
+		/* margin-bo200rom: 40px; */
+		padding: 0;
 }
+
+.avatar {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 
 .userInfo-nickname {
-    grid-area: a2;
     color: #fff;
-    font-size: 48rpx;
+    font-size: 40rpx;
     text-align: left;
-    font-weight: bold;
+		font-weight: bold;
+		padding-left: 20rpx;
 }
-
-.userInfo-info {
-    grid-area: a3;
-    color: #fff;
-    font-size: 28rpx;
-    text-align: left;
-}
-
-.userInfo-button {
-    width: 40%;
-    margin: auto;
-    padding-top: 400rpx;
-}
-
 
 .myList {
     width: 100%;
