--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -41,7 +41,7 @@ page {
 
 .footer {
   width: 100%;
-  height: 10vh;
+  height: 150rpx;
   position: fixed;
   bottom: 0;
   display: flex;
@@ -49,11 +49,12 @@ page {
   color: white;
   background-color: var(--themeColor);
   font-size: large;
+  padding-top: 40rpx;
 }
 
 .footer view {
   width: 100%;
-  height: 100%;
-  padding-top: 2vh;
+  /* height: 100%; */
+  /* padding-top: 2vh; */
   text-align: center;
 }
